--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines":{
+  "engines": {
     "node": "18.x"
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
+    "start":"node server.js --mode production",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "json-server": "^0.17.1"
   }
 }
