--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "start":"node server.js --mode production",
+    "start":"node ./src/server.js --mode production",
     "build": "vite build",
     "preview": "vite preview"
   },
